--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                         <picture class="top__pic">
                             <!-- <source type="image/avif" srcset="">
                             <source type="image/avif" srcset=""> -->
-                            <img class="top__image" src="/images/top_video.png" alt="top_image">
+                            <img class="top__image" src="./images/top_video.png" alt="top_image">
                         </picture>
                         <p class="about__left_text">В этом видео вы познакомитесь со мной, узнаете о  моём взгляде на современную психологию и том чем я могу вам помочь</p>
                     </div>
