--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@
         </footer>
     </div>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-    <script src="script/owl.carousel.min.js"></script>
-    <script src="/script/script.js"></script> 
+    <script src="./script/owl.carousel.min.js"></script>
+    <script src="./script/script.js"></script> 
 </body>
 </html>
