--- a/online.html
+++ b/online.html
@@ -51,7 +51,7 @@
                 <p class="help__description">Я работаю с клиентами в онлайне - большинству так удобнее, а  эффективность <br> ничуть не страдает. Возможна как комплексная системная работа, так и разовые <br> консультации.</p>
                 <form class="form" action="#">
                     <input class="form__input_text" type="text" placeholder="Имя" required>
-                    <input class="form__input_tel" type="tel" placeholder="Телефон" required>
+                    <input class="form__input_tel" type="tel" placeholder="8(123)123-45-67" required>
                     <div class="form_wrapp">
                         <button class="form__btn btn">Оставить заявку</button>
                         <p class="form__descript">нажимая на кнопку "оставить заявку", вы подтверждаете свое согласие на обработку <a class="form__link" href="#">пользовательских данных</a></p>
@@ -100,7 +100,6 @@
             </div>
         </footer>
     </div>
-
-    <script src="./script/script.js"></script>
+    <script src="./script/online.js"></script> 
 </body>
 </html>
