--- a/reviews.html
+++ b/reviews.html
@@ -74,11 +74,11 @@
                         <p class="all_reviews_card__descript">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Laborum necessitatibus architecto enim ea expedita ad deserunt, sint consequatur et commodi similique facere dolore beatae eligendi officia voluptas dolor reprehenderit iure possimus rem voluptatum dolorum optio ex! Distinctio quod obcaecati vitae sapiente laborum autem atque architecto, fugit consectetur! Quod, libero deserunt?</p>
                     </div>
                 </div>
-                <form class="review_form" action="">
+                <form name="my_form" class="review_form" action="">
                     <label class="review_form__label" for="">Добавить Отзыв</label>
                     <input class="review_form__input" type="text" name="name" value="" placeholder="Имя" required>
                     <input class="review_form__input" type="text" name="city" value="" placeholder="Город" required>
-                    <textarea required class="review_form__textarea name="review" placeholder="Выш Отзыв"></textarea>
+                    <textarea required class="review_form__textarea" name="review" placeholder="Ваш Отзыв"></textarea>
                     <button type="submit" class="review_form__btn">Отправить</button>
                 </form>
 
@@ -125,5 +125,6 @@
             <a class="footer_bottom__link" href="#">Пользовательское соглашение</a>
         </div>
     </footer>
+    <script src="./script/review.js"></script>
 </body>
 </html>
