onlin&review_js

--- a/online.html
+++ b/online.html
@@ -49,7 +49,7 @@
             <section class="help online_help">
                 <h2 class="help__title">Здесь вы можете оставить заявку</h2>
                 <p class="help__description">Я работаю с клиентами в онлайне - большинству так удобнее, а  эффективность <br> ничуть не страдает. Возможна как комплексная системная работа, так и разовые <br> консультации.</p>
-                <form class="form" action="#">
+                <form name="my_form" class="form" action="#">
                     <input class="form__input_text" type="text" placeholder="Имя" required>
                     <input class="form__input_tel" type="tel" placeholder="8(123)123-45-67" required>
                     <div class="form_wrapp">
