--- a/reviews.html
+++ b/reviews.html
@@ -38,6 +38,7 @@
         </div>
     </header>
     <main class="main">
+        <div class="message"></div>
         <div class="wrapp">
             <h2 class="all_reviews__title">Все отзывы</h2>
 
@@ -76,14 +77,16 @@
                 </div>
                 <form name="my_form" class="review_form" action="">
                     <label class="review_form__label" for="">Добавить Отзыв</label>
-                    <input class="review_form__input" type="text" name="name" value="" placeholder="Имя" required>
+                    <input class="review_form__input" type="text" name="my_name" value="" placeholder="Имя" required>
                     <input class="review_form__input" type="text" name="city" value="" placeholder="Город" required>
                     <textarea required class="review_form__textarea" name="review" placeholder="Ваш Отзыв"></textarea>
                     <button type="submit" class="review_form__btn">Отправить</button>
                 </form>
 
             </section>
+
             <a class="index_link" href="index.html">На главную</a>
+
         </div>
     </main>
     <footer class="footer">
