--- a/help.html
+++ b/help.html
@@ -16,20 +16,20 @@
         <header class="header">
             <div class="header_top">
                 <div class="social_wrapp">
-                    <a class="header_top__social_link" href="https://vk.com/svetemuzic"><img class="header_top__social_icons" src="images/icons/vk.png" alt="vk_icon"></a>
-                    <a class="header_top__social_link" href="#"><img class="header_top__social_icons" src="images/icons/telegramm.png" alt="telegram_icon"></a>
-                    <a class="header_top__social_link" href="#"><img class="header_top__social_icons" src="images/icons/whatsapp.png" alt="whatsapp_icon"></a>
+                    <a class="header_top__social_link" href="https://vk.com/svetemuzic"><img class="header_top__social_icons" src="./images/icons/vk.png" alt="vk_icon"></a>
+                    <a class="header_top__social_link" href="#"><img class="header_top__social_icons" src="./images/icons/telegramm.png" alt="telegram_icon"></a>
+                    <a class="header_top__social_link" href="#"><img class="header_top__social_icons" src=".images/icons/whatsapp.png" alt="whatsapp_icon"></a>
                     <a href="mailto:help@example.com?subject=Вопрос&body=Здравствуйте," class="header_top__link" >help@example.com</a>
                 </div>
                 <div class="header_phone">
-                    <img src="images/icons/phone.png" alt="phone_icon">
+                    <img src="./images/icons/phone.png" alt="phone_icon">
                     <a class="phone_link" href="tel:89104570560"><span class="phone_text">Обратный звонок</span></a>
                     <span class="phone_number">8(910)457-05-60</span>
                 </div>
             </div>
             <div class="header_bottom">
                 <div class="logo">
-                    <a href="index.html"><img src="images/top_logo.png" alt="logo"></a>
+                    <a href="index.html"><img src="./images/top_logo.png" alt="logo"></a>
                 </div>
                 <nav class="header_navigate">
                     <ul class="header_navigate__list">
@@ -48,49 +48,49 @@
                 <h2 class="all_help_title">Я могу помочь</h2>
                 <div class="message"></div>
                 <ul class="all_help_card">
-                    <li class="all_help_card__img"><img src="/images/card_1.png" alt="card_image"></li>
+                    <li class="all_help_card__img"><img src="./images/card_1.png" alt="card_image"></li>
                     <li class="all_help_card__descript">
                         <span class="all_help_card__title">Реанимация и восстановление отношений</span>
                         <span class="all_help_card__text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cumque debitis provident ullam velit porro, libero magni non temporibus ipsam consequatur repudiandae, aspernatur maxime qui impedit laboriosam id, dolorum inventore ad.</span>
                     </li>
                 </ul>
                 <ul class="all_help_card">
-                    <li class="all_help_card__img"><img src="/images/card_2.png" alt="card_image"></li>
+                    <li class="all_help_card__img"><img src="./images/card_2.png" alt="card_image"></li>
                     <li class="all_help_card__descript">
                         <span class="all_help_card__title">Семейный психолог</span>
                         <span class="all_help_card__text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cumque debitis provident ullam velit porro, libero magni non temporibus ipsam consequatur repudiandae, aspernatur maxime qui impedit laboriosam id, dolorum inventore ad.</span>
                     </li>
                 </ul>
                 <ul class="all_help_card">
-                    <li class="all_help_card__img"><img src="/images/card_3.png" alt="card_image"></li>
+                    <li class="all_help_card__img"><img src="./images/card_3.png" alt="card_image"></li>
                     <li class="all_help_card__descript">
                         <span class="all_help_card__title">Помощь и поддержка в кризисных ситуациях</span>
                         <span class="all_help_card__text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cumque debitis provident ullam velit porro, libero magni non temporibus ipsam consequatur repudiandae, aspernatur maxime qui impedit laboriosam id, dolorum inventore ad.</span>
                     </li>
                 </ul>
                 <ul class="all_help_card">
-                    <li class="all_help_card__img"><img src="/images/card_4.png" alt="card_image"></li>
+                    <li class="all_help_card__img"><img src="./images/card_4.png" alt="card_image"></li>
                     <li class="all_help_card__descript">
                         <span class="all_help_card__title">Решение проблем, достижения цели</span>
                         <span class="all_help_card__text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cumque debitis provident ullam velit porro, libero magni non temporibus ipsam consequatur repudiandae, aspernatur maxime qui impedit laboriosam id, dolorum inventore ad.</span>
                     </li>
                 </ul>
                 <ul class="all_help_card">
-                    <li class="all_help_card__img"><img src="/images/card_5.png" alt="card_image"></li>
+                    <li class="all_help_card__img"><img src="./images/card_5.png" alt="card_image"></li>
                     <li class="all_help_card__descript">
                         <span class="all_help_card__title">Психолог для пар</span>
                         <span class="all_help_card__text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cumque debitis provident ullam velit porro, libero magni non temporibus ipsam consequatur repudiandae, aspernatur maxime qui impedit laboriosam id, dolorum inventore ad.</span>
                     </li>
                 </ul>
                 <ul class="all_help_card">
-                    <li class="all_help_card__img"><img src="/images/card_6.png" alt="card_image"></li>
+                    <li class="all_help_card__img"><img src="./images/card_6.png" alt="card_image"></li>
                     <li class="all_help_card__descript">
                         <span class="all_help_card__title">Помощь при абьюзивных отношениях</span>
                         <span class="all_help_card__text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cumque debitis provident ullam velit porro, libero magni non temporibus ipsam consequatur repudiandae, aspernatur maxime qui impedit laboriosam id, dolorum inventore ad.</span>
                     </li>
                 </ul>
                 <ul class="all_help_card">
-                    <li class="all_help_card__img"><img src="/images/card_7.png" alt="card_image"></li>
+                    <li class="all_help_card__img"><img src="./images/card_7.png" alt="card_image"></li>
                     <li class="all_help_card__descript">
                         <span class="all_help_card__title">Индивидуальные консультации для взрослых</span>
                         <span class="all_help_card__text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cumque debitis provident ullam velit porro, libero magni non temporibus ipsam consequatur repudiandae, aspernatur maxime qui impedit laboriosam id, dolorum inventore ad.</span>
@@ -103,12 +103,12 @@
             <div class="footer_top">
                 <div class="footer_wrapp">
                     <div class="logo">
-                        <a href="index.html"><img class="footer_logo" src="images/footer_logo.png" alt="logo"></a>
+                        <a href="index.html"><img class="footer_logo" src="./images/footer_logo.png" alt="logo"></a>
                     </div>
                     <div class="social_wrapp footer_social">
-                        <a class="footer_top__social_link" href="https://vk.com/svetemuzic"><img class="footer_top__social_icons" src="images/icons/vk.png" alt="vk_icon"></a>
-                        <a class="footer_top__social_link" href="#"><img class="footer_top__social_icons" src="images/icons/telegramm.png" alt="telegram_icon"></a>
-                        <a class="footer_top__social_link" href="#"><img class="footer_top__social_icons" src="images/icons/whatsapp.png" alt="whatsapp_icon"></a>                     
+                        <a class="footer_top__social_link" href="https://vk.com/svetemuzic"><img class="footer_top__social_icons" src="./images/icons/vk.png" alt="vk_icon"></a>
+                        <a class="footer_top__social_link" href="#"><img class="footer_top__social_icons" src="./images/icons/telegramm.png" alt="telegram_icon"></a>
+                        <a class="footer_top__social_link" href="#"><img class="footer_top__social_icons" src="./images/icons/whatsapp.png" alt="whatsapp_icon"></a>                     
                     </div>
                 </div>
                 <nav class="footer_navigate">
@@ -123,11 +123,11 @@
                 </nav>
                 <div class="footer_contacts">
                     <div class="footer_phone">
-                        <img src="images/icons/phone.png" alt="phone_icon">
+                        <img src="./images/icons/phone.png" alt="phone_icon">
                         <a href="tel:89104570560" class="phone_number">8(910)457-05-60</a>
                     </div>
                     <div class="email">
-                        <img src="images/icons/mail.png" alt="email_icon">
+                        <img src="./images/icons/mail.png" alt="email_icon">
                         <a href="mailto:help@example.com?subject=Вопрос&body=Здравствуйте," class="header_top__link">help@example.com</a>
                     </div>
                 </div>
