--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
         <header class="header">
             <div class="header_top">
                 <div class="social_wrapp">
-                    <a class="header_top__social_link" href="https://vk.com/svetemuzic"><img class="header_top__social_icons" src="images/icons/vk.png" alt="vk_icon"></a>
-                    <a class="header_top__social_link" href="#"><img class="header_top__social_icons" src="images/icons/telegramm.png" alt="telegram_icon"></a>
-                    <a class="header_top__social_link" href="#"><img class="header_top__social_icons" src="images/icons/whatsapp.png" alt="whatsapp_icon"></a>
+                    <a class="header_top__social_link" href="https://vk.com/svetemuzic"><img class="header_top__social_icons" src="./images/icons/vk.png" alt="vk_icon"></a>
+                    <a class="header_top__social_link" href="#"><img class="header_top__social_icons" src="./images/icons/telegramm.png" alt="telegram_icon"></a>
+                    <a class="header_top__social_link" href="#"><img class="header_top__social_icons" src="./images/icons/whatsapp.png" alt="whatsapp_icon"></a>
                     <a href="mailto:help@example.com?subject=Вопрос&body=Здравствуйте," class="header_top__link" >help@example.com</a>
                 </div>
                 <div class="header_phone">
@@ -64,7 +64,7 @@
                     <picture class="top__pic">
                         <!-- <source type="image/avif" srcset="">
                         <source type="image/avif" srcset=""> -->
-                        <img class="top__image" src="images/image_top.png" alt="top_image">
+                        <img class="top__image" src="./images/image_top.png" alt="top_image">
                     </picture>
                     
                 </section>
@@ -97,23 +97,23 @@
                     <h2 class="my_help__title">С чем я могу помочь</h2>
                     <div class="card_wrapp">
                         <ul class="card">
-                            <li class="card__picture"><img class="card_image" src="images/card_1.png" alt="card_picture"></li>
+                            <li class="card__picture"><img class="card_image" src="./images/card_1.png" alt="card_picture"></li>
                             <li class="card__descrit"><span class="card__text">Реанимация и восстановление отношений</span></li>
                         </ul>
                         <ul class="card">
-                            <li class="card__picture"><img class="card_image" src="images/card_2.png" alt="card_picture"></li>
+                            <li class="card__picture"><img class="card_image" src="./images/card_2.png" alt="card_picture"></li>
                             <li class="card__descrit"><span class="card__text">Помощь и поддержка в кризисных ситуациях</span></li>
                         </ul>
                         <ul class="card">
-                            <li class="card__picture"><img class="card_image" src="images/card_3.png" alt="card_picture"></li>
+                            <li class="card__picture"><img class="card_image" src="./images/card_3.png" alt="card_picture"></li>
                             <li class="card__descrit"><span class="card__text">Решение проблем, достижения цели</span></li>
                         </ul>
                         <ul class="card">
-                            <li class="card__picture"><img class="card_image" src="images/card_4.png" alt="card_picture"></li>
+                            <li class="card__picture"><img class="card_image" src="./images/card_4.png" alt="card_picture"></li>
                             <li class="card__descrit"><span class="card__text">Семейный психолог</span></li>
                         </ul>
                         <ul class="card">
-                            <li class="card__picture"><img class="card_image" src="images/card_5.png" alt="card_picture"></li>
+                            <li class="card__picture"><img class="card_image" src="./images/card_5.png" alt="card_picture"></li>
                             <li class="card__descrit"><span class="card__text">Психолог для пар</span></li>
                         </ul>
                         <!-- <ul class="card">
@@ -121,7 +121,7 @@
                             <li class="card__descrit"><span class="card__text">Помощь при абьюзивных отношениях</span></li>
                         </ul> -->
                         <ul class="card">
-                            <li class="card__picture"><img class="card_image" src="images/card_7.png" alt="card_picture"></li>
+                            <li class="card__picture"><img class="card_image" src="./images/card_7.png" alt="card_picture"></li>
                             <li class="card__descrit"><span class="card__text">Индивидуальные консультации для взрослых</span></li>
                         </ul>
                     </div>
@@ -133,14 +133,14 @@
                     <!-- Индивидуальная консультация -->
                     <div class="direct_card">          
                         <ul class="direct_card__wrapp">
-                            <li class="direct_card__number"><img src="/images/icons/number_1.png"alt="card_icon"></li>
+                            <li class="direct_card__number"><img src="./images/icons/number_1.png"alt="card_icon"></li>
                             <li class="direct_card__title">Индивидуальна консультация</li>
                             <li class="direct_card__description">Работаюс внутренним миром и личнымпространством клиента, анализирую егомышление, эмоции и реакции которыевлияют на поступкию Цель индивидуальнойконсультации - устранить прицины иследствия психологических проблемклиента и дать ему правильные ориентиры<li>
                         </ul>  
                         <picture class="direct_card__picture">
                                 <!-- <source type='image/avif' srcset='./image/.avif'>
                                 <source type='image/webp' srcset='./image/.webp' > -->
-                                <img class="direct_card__image" src='/images/direct_1.png' alt='card_image'>
+                                <img class="direct_card__image" src='./images/direct_1.png' alt='card_image'>
                         </picture>	        
                     </div>
                     <!-- Работа с парами -->
@@ -151,7 +151,7 @@
                             <img class="direct_card__image" src='./images/direct_2.png' alt='card_image'>
                         </picture>	
                         <ul class="direct_card__wrapp">
-                            <li class="direct_card__number"><img src="/images/icons/number_2.png" alt="card_icon"></li>
+                            <li class="direct_card__number"><img src="./images/icons/number_2.png" alt="card_icon"></li>
                             <li class="direct_card__title">Работа с парами</li>
                             <li class="direct_card__description">Гармоничные отношения - это всегда работа двоих, где партнеры идут навстречу друг другую Но не редко бывает что один борется, а второй опуcкает руки и плывет по течению. Наладить отношения в таких случаях сложно, но возможно. Я использую техники и приемы семейной терапии, направленные на командную работу над улучшением отношений. Это спасает пары, которые при других условиях давно бы расстались</li>
                         </ul>         
@@ -159,7 +159,7 @@
                     <!-- Работа с семьями -->
                     <div class="direct_card">          
                         <ul class="direct_card__wrapp">
-                            <li class="direct_card__number"><img src="/images/icons/number_3.png" alt="card_icon"></li>
+                            <li class="direct_card__number"><img src="./images/icons/number_3.png" alt="card_icon"></li>
                             <li class="direct_card__title">Работа с семьями </li>
                             <li class="direct_card__description">Идеальная семья - это место, где всегда безопасно и комфортно, которое заряжает жизненой энергией и мотивирует на достижения. Если погода в доме испортилась, её нужно улучшать, а не строить новый дом. Помощь кваоифицированного психолога вернет атмосферу тихой гавани, в которую хочется возвращаться</li>
                         </ul>  
@@ -177,7 +177,7 @@
                             <img class="direct_card__image" src='./images/direct_4.png' alt='card_image'>
                         </picture>	        
                         <ul class="direct_card__wrapp">
-                            <li class="direct_card__number"><img src="/images/icons/number_4.png" alt="card_icon"></li>
+                            <li class="direct_card__number"><img src="./images/icons/number_4.png" alt="card_icon"></li>
                             <li class="direct_card__title">Гармонизация отношений детей и родителей</li>
                             <li class="direct_card__description">Гармоничные отношения - это не про послушание или вседозволеность, а про то, чтобы слышать, понимать и уважать друг друга в любом возрасте. Это возможно, даже если родители расстались и нашли новых партнеров. Я знаю, как минимизировать последствия детской реакции на развод родителей или решить извечный кофликт поколений</li>
                         </ul>          
@@ -185,7 +185,7 @@
                     <!-- Решение проблем социализации -->
                     <div class="direct_card">          
                         <ul class="direct_card__wrapp">
-                            <li class="direct_card__number"><img src="/images/icons/number_5.png" alt="card_icon"></li>
+                            <li class="direct_card__number"><img src="./images/icons/number_5.png" alt="card_icon"></li>
                             <li class="direct_card__title">Решение проблем социализации</li>
                             <li class="direct_card__description">Вам стало(или всегда было) сложно общаться с друзьями или коллегами? Стремитесь абстрагироваться от общества, укрыться в своей "скорлупе"? Чувствуете что это негативно влияет на качество жизни? Все можно исправить.</li>
                         </ul>  
@@ -336,12 +336,12 @@
             <div class="footer_top">
                 <div class="footer_wrapp">
                     <div class="logo">
-                        <a href="index.html"><img class="footer_logo" src="images/footer_logo.png" alt="logo"></a>
+                        <a href="index.html"><img class="footer_logo" src="./images/footer_logo.png" alt="logo"></a>
                     </div>
                     <div class="social_wrapp footer_social">
-                        <a class="footer_top__social_link" href="https://vk.com/svetemuzic"><img class="footer_top__social_icons" src="images/icons/vk.png" alt="vk_icon"></a>
-                        <a class="footer_top__social_link" href="#"><img class="footer_top__social_icons" src="images/icons/telegramm.png" alt="telegram_icon"></a>
-                        <a class="footer_top__social_link" href="#"><img class="footer_top__social_icons" src="images/icons/whatsapp.png" alt="whatsapp_icon"></a>                     
+                        <a class="footer_top__social_link" href="https://vk.com/svetemuzic"><img class="footer_top__social_icons" src="./images/icons/vk.png" alt="vk_icon"></a>
+                        <a class="footer_top__social_link" href="#"><img class="footer_top__social_icons" src="./images/icons/telegramm.png" alt="telegram_icon"></a>
+                        <a class="footer_top__social_link" href="#"><img class="footer_top__social_icons" src="./images/icons/whatsapp.png" alt="whatsapp_icon"></a>                     
                     </div>
                 </div>
                 <nav class="footer_navigate">
@@ -356,11 +356,11 @@
                 </nav>
                 <div class="footer_contacts">
                     <div class="footer_phone">
-                        <img src="images/icons/phone.png" alt="phone_icon">
+                        <img src="./images/icons/phone.png" alt="phone_icon">
                         <a href="tel:+79104567755" class="phone_number">8(910)457-05-60</a>
                     </div>
                     <div class="email">
-                        <img src="images/icons/mail.png" alt="email_icon">
+                        <img src="./images/icons/mail.png" alt="email_icon">
                         <a href="mailto:help@example.com?subject=Вопрос&body=Здравствуйте," class="header_top__link">help@example.com</a>
                     </div>
                 </div>
