--- a/reviews.html
+++ b/reviews.html
@@ -10,20 +10,20 @@
     <header class="header">
         <div class="header_top">
             <div class="social_wrapp">
-                <a class="header_top__social_link" href="https://vk.com/svetemuzic"><img class="header_top__social_icons" src="images/icons/vk.png" alt="vk_icon"></a>
-                <a class="header_top__social_link" href="#"><img class="header_top__social_icons" src="images/icons/telegramm.png" alt="telegram_icon"></a>
-                <a class="header_top__social_link" href="#"><img class="header_top__social_icons" src="images/icons/whatsapp.png" alt="whatsapp_icon"></a>
+                <a class="header_top__social_link" href="https://vk.com/svetemuzic"><img class="header_top__social_icons" src="./images/icons/vk.png" alt="vk_icon"></a>
+                <a class="header_top__social_link" href="#"><img class="header_top__social_icons" src="./images/icons/telegramm.png" alt="telegram_icon"></a>
+                <a class="header_top__social_link" href="#"><img class="header_top__social_icons" src="./images/icons/whatsapp.png" alt="whatsapp_icon"></a>
                 <a href="mailto:help@example.com?subject=Вопрос&body=Здравствуйте," class="header_top__link" >help@example.com</a>
             </div>
             <div class="header_phone">
-                <img src="images/icons/phone.png" alt="phone_icon">
+                <img src="./images/icons/phone.png" alt="phone_icon">
                 <a class="phone_link" href="tel:89104570560"><span class="phone_text">Обратный звонок</span></a>
                 <span class="phone_number">8(910)457-05-60</span>
             </div>
         </div>
         <div class="header_bottom">
             <div class="logo">
-                <a href="index.html"><img src="images/top_logo.png" alt="logo"></a>
+                <a href="index.html"><img src="./images/top_logo.png" alt="logo"></a>
             </div>
             <nav class="header_navigate">
                 <ul class="header_navigate__list">
@@ -96,9 +96,9 @@
                     <a href="index.html"><img class="footer_logo" src="images/footer_logo.png" alt="logo"></a>
                 </div>
                 <div class="social_wrapp footer_social">
-                    <a class="footer_top__social_link" href="https://vk.com/svetemuzic"><img class="footer_top__social_icons" src="images/icons/vk.png" alt="vk_icon"></a>
-                    <a class="footer_top__social_link" href="#"><img class="footer_top__social_icons" src="images/icons/telegramm.png" alt="telegram_icon"></a>
-                    <a class="footer_top__social_link" href="#"><img class="footer_top__social_icons" src="images/icons/whatsapp.png" alt="whatsapp_icon"></a>                     
+                    <a class="footer_top__social_link" href="https://vk.com/svetemuzic"><img class="footer_top__social_icons" src="./images/icons/vk.png" alt="vk_icon"></a>
+                    <a class="footer_top__social_link" href="#"><img class="footer_top__social_icons" src="./images/icons/telegramm.png" alt="telegram_icon"></a>
+                    <a class="footer_top__social_link" href="#"><img class="footer_top__social_icons" src="./images/icons/whatsapp.png" alt="whatsapp_icon"></a>                     
                 </div>
             </div>
             <nav class="footer_navigate">
@@ -113,11 +113,11 @@
             </nav>
             <div class="footer_contacts">
                 <div class="footer_phone">
-                    <img src="images/icons/phone.png" alt="phone_icon">
+                    <img src="./images/icons/phone.png" alt="phone_icon">
                     <a href="tel:89104570560" class="phone_number">8(910)457-05-60</a>
                 </div>
                 <div class="email">
-                    <img src="images/icons/mail.png" alt="email_icon">
+                    <img src="./images/icons/mail.png" alt="email_icon">
                     <a href="mailto:help@example.com?subject=Вопрос&body=Здравствуйте," class="header_top__link">help@example.com</a>
                 </div>
             </div>
