--- a/help.html
+++ b/help.html
@@ -48,49 +48,49 @@
                 <h2 class="all_help_title">Я могу помочь</h2>
                 <div class="message"></div>
                 <ul class="all_help_card">
-                    <li class="all_help_card__img"><img src="./images/card_1.png" alt="card_image"></li>
+                    <li class="all_help_card__img"><img class="all_img" src="./images/card_1.png" alt="card_image"></li>
                     <li class="all_help_card__descript">
                         <span class="all_help_card__title">Реанимация и восстановление отношений</span>
                         <span class="all_help_card__text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cumque debitis provident ullam velit porro, libero magni non temporibus ipsam consequatur repudiandae, aspernatur maxime qui impedit laboriosam id, dolorum inventore ad.</span>
                     </li>
                 </ul>
                 <ul class="all_help_card">
-                    <li class="all_help_card__img"><img src="./images/card_2.png" alt="card_image"></li>
+                    <li class="all_help_card__img"><img class="all_img" src="./images/card_2.png" alt="card_image"></li>
                     <li class="all_help_card__descript">
                         <span class="all_help_card__title">Семейный психолог</span>
                         <span class="all_help_card__text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cumque debitis provident ullam velit porro, libero magni non temporibus ipsam consequatur repudiandae, aspernatur maxime qui impedit laboriosam id, dolorum inventore ad.</span>
                     </li>
                 </ul>
                 <ul class="all_help_card">
-                    <li class="all_help_card__img"><img src="./images/card_3.png" alt="card_image"></li>
+                    <li class="all_help_card__img"><img class="all_img" src="./images/card_3.png" alt="card_image"></li>
                     <li class="all_help_card__descript">
                         <span class="all_help_card__title">Помощь и поддержка в кризисных ситуациях</span>
                         <span class="all_help_card__text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cumque debitis provident ullam velit porro, libero magni non temporibus ipsam consequatur repudiandae, aspernatur maxime qui impedit laboriosam id, dolorum inventore ad.</span>
                     </li>
                 </ul>
                 <ul class="all_help_card">
-                    <li class="all_help_card__img"><img src="./images/card_4.png" alt="card_image"></li>
+                    <li class="all_help_card__img"><img class="all_img" src="./images/card_4.png" alt="card_image"></li>
                     <li class="all_help_card__descript">
                         <span class="all_help_card__title">Решение проблем, достижения цели</span>
                         <span class="all_help_card__text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cumque debitis provident ullam velit porro, libero magni non temporibus ipsam consequatur repudiandae, aspernatur maxime qui impedit laboriosam id, dolorum inventore ad.</span>
                     </li>
                 </ul>
                 <ul class="all_help_card">
-                    <li class="all_help_card__img"><img src="./images/card_5.png" alt="card_image"></li>
+                    <li class="all_help_card__img"><img class="all_img" src="./images/card_5.png" alt="card_image"></li>
                     <li class="all_help_card__descript">
                         <span class="all_help_card__title">Психолог для пар</span>
                         <span class="all_help_card__text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cumque debitis provident ullam velit porro, libero magni non temporibus ipsam consequatur repudiandae, aspernatur maxime qui impedit laboriosam id, dolorum inventore ad.</span>
                     </li>
                 </ul>
                 <ul class="all_help_card">
-                    <li class="all_help_card__img"><img src="./images/card_6.png" alt="card_image"></li>
+                    <li class="all_help_card__img"><img class="all_img" src="./images/card_6.png" alt="card_image"></li>
                     <li class="all_help_card__descript">
                         <span class="all_help_card__title">Помощь при абьюзивных отношениях</span>
                         <span class="all_help_card__text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cumque debitis provident ullam velit porro, libero magni non temporibus ipsam consequatur repudiandae, aspernatur maxime qui impedit laboriosam id, dolorum inventore ad.</span>
                     </li>
                 </ul>
                 <ul class="all_help_card">
-                    <li class="all_help_card__img"><img src="./images/card_7.png" alt="card_image"></li>
+                    <li class="all_help_card__img"><img class="all_img" src="./images/card_7.png" alt="card_image"></li>
                     <li class="all_help_card__descript">
                         <span class="all_help_card__title">Индивидуальные консультации для взрослых</span>
                         <span class="all_help_card__text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cumque debitis provident ullam velit porro, libero magni non temporibus ipsam consequatur repudiandae, aspernatur maxime qui impedit laboriosam id, dolorum inventore ad.</span>
