--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
             </div>
             <div class="header_bottom">
                 <div class="logo">
-                    <a href="index.html"><img src="images/top_logo.png" alt="logo"></a>
+                    <a href="index.html"><img class="logo__img" src="images/top_logo.png" alt="logo"></a>
                 </div>
                 <nav class="header_navigate">
                     <ul class="header_navigate__list">
-                        <li class="header_navigate__item"><a class="header_navigate__link" href="#">Обо мне</a></li>
+                        <li class="header_navigate__item"><a class="header_navigate__link" href="about.html">Обо мне</a></li>
                         <li class="header_navigate__item"><a class="header_navigate__link" href="help.html">Моя помощь</a></li>
                         <li class="header_navigate__item"><a class="header_navigate__link" href="online.html">Онлайн запись</a></li>
                         <li class="header_navigate__item"><a class="header_navigate__link" href="reviews.html">Отзывы</a></li>
@@ -71,7 +71,7 @@
                 <!--  обо мне -->        
                 <section class="about">
                     <div class="about__left">
-                        <picture class="top__pic">
+                        <picture class="about__pic">
                             <!-- <source type="image/avif" srcset="">
                             <source type="image/avif" srcset=""> -->
                             <img class="top__image" src="./images/top_video.png" alt="top_image">
